test/error/0002-redefinition3.c
/*
PATTERN: x
PATTERN: c:9
*/

struct x {
	int x;
	int y;
	int x;
};
